@@ -1,5 +1,6 @@
 2.0.0 2007-?-?
 ========
+ * compatibility fix for apache 1.x
  * full Zend Optimizer compatibility
 
 1.2.0 2006-12-10
